--- a/app/src/main/res/drawable/rounded_corner_spinner_border.xml
+++ b/app/src/main/res/drawable/rounded_corner_spinner_border.xml
@@ -7,8 +7,8 @@
                     android:id="@+id/rounded_corner_spinner">
                     <solid android:color="#FFFFFF" />
                     <stroke android:width="1dp"
-                        android:color="#E0E0E0" />
-                    <corners android:radius="15dp" />
+                        android:color="#b6907f" />
+                    <corners android:radius="20dp" />
                 </shape>
             </item>
             <item
