--- a/app/src/main/res/layout/activity_quiz_list.xml
+++ b/app/src/main/res/layout/activity_quiz_list.xml
@@ -19,7 +19,7 @@
         <LinearLayout
             android:id="@+id/quiz_list_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:paddingVertical="64dp"
             android:orientation="vertical">
